-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
None
-
-
24d80c6a7856547036c36b719ca9aba6bb59b815 (qt/qtmultimedia/dev) ab0257485b50a9afe30055b1f7b9dbebaaba99a9 (qt/qtmultimedia/6.2)
-
2021wk42POAndroid&Mobile, 2021wk44POAndroid&Mobile
Steps to reproduce:
1. Open audiorecorder example
2. Set file propeties as on the video
3. Start recording
4. Safe file
Expected:
1. Once user save file it should be not empty at desired localisation
2. File stored in app workspace is in different type and name than expected
- duplicates
-
QTBUG-96081 audiorecorder widgets example doesn't work properly if output name is assigned
-
- Closed
-
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-