Android: Fix for Content uri issues

After fix file name and file extension will pass as a initial name to the file name field of the QFileDialog.

Fixes: QTBUG-96957
Pick-to: 6.2
Change-Id: Iea97b1249195fee1021163beb23130141093c3a4
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>